# llm-jina-api

./: llm_jina_api.py  pyproject.toml
.github/workflows/: publish.yml  test.yml
tests/: test_jina_api.py
